Alterado imports para rotas absolutas

--- a/src/assets/css/personalizacaoBootstrap.scss
+++ b/src/assets/css/personalizacaoBootstrap.scss
@@ -7,7 +7,16 @@ $danger: #fe5252 !default;
 //$light: $gray-100 !default;
 //$dark: $gray-800 !default;
 
+// Custom Bootstrap variable overrides go first
+$grid-breakpoints: (
+  xs: 0,
+  sm: 480px,
+  md: 640px,
+  lg: 992px,
+  xl: 1300px,
+);
+$enable-rounded: false;
 
 // Then import Bootstrap an BootstrapVue SCSS files (order is important)
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
-@import 'node_modules/bootstrap-vue/src/index.scss';
+@import "node_modules/bootstrap/scss/bootstrap.scss";
+@import "node_modules/bootstrap-vue/src/index.scss";
